feat: expose Wayland fractional scale